# axum_auth_backend

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: database.rs  main.rs  pre_import.rs
src/controllers/: add_controller.rs  get_controller.rs  list_controller.rs  mod.rs
src/middleware/: cors.rs  mod.rs
src/models/: mod.rs  newuser.rs  user.rs
src/routes/: mod.rs  user_routes.rs
src/tests/: api_test.rs
