[package]
name = "axum_auth_backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.7", features = ["postgres", "runtime-tokio-native-tls"] }
dotenvy = "0.15"
anyhow = "1.0.98"
serde = { version = "1.0", features = ["derive"] }
tower-http = {version = "0.6",features = ["cors","trace"] }

[dev-dependencies]
tokio = { version = "1.4", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
httpc-test ="0.1.1"